# moq-cpp

./: .gitattributes  .gitignore  .tmp-metadata-full.json  .tmp-metadata.json  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  THIRD-PARTY-NOTICES.txt  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  dev.bat  dev.sh  moq-cpp-config.cmake.in
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cpp/: README.md
cpp/include/: moq_wrapper.h
cpp/include/moq/: client.h  moq.h  session.h  track.h
cpp/src/: moq_broadcast.cpp  moq_client.cpp  moq_group.cpp  moq_session.cpp  moq_track.cpp  moq_wrapper.cpp
docs/: MOQ_MANAGER_SUMMARY.md
examples/: .gitignore  CMakeLists.txt  README.md  clock_example.rs  clock_publisher.cpp  clock_subscriber.cpp  hang_subscriber.rs  test_callbacks.md
examples/cpp/: README.md  basic_example.cpp  catalog_test.cpp  clock_example.cpp  publisher_subscriber_example.cpp  relay_test.cpp  relay_test_mgr.cpp
examples/cpp/proto/: sesame_binary_protocol.cc  sesame_binary_protocol.h
examples/moq-clock/: Cargo.toml
examples/moq-clock/src/: clock.rs  main.rs
examples/rs/catalog-test/: Cargo.toml
examples/rs/catalog-test/src/: main.rs
examples/rs/moq-clock/src/: clock.rs  main.rs
examples/rs/relay-test/: Cargo.toml  HOWTO_RUN.md  README.md  README_MGR.md
examples/rs/relay-test/src/: main.rs  main_mgr.rs  sesame_protocol.rs
moq-cpp/include/moq/: broadcast.h  group.h  moq.h  origin.h  session.h
moq-cpp/src/: moq_client.cpp  moq_origin.cpp  moq_session.cpp
moq-ffi/: Cargo-minimal.toml  Cargo.toml  build.rs  cbindgen.toml
moq-ffi/include/: moq_ffi.h  moq_ffi_manual.h
moq-ffi/src/: lib-minimal.rs  lib.rs  lib_new.rs
moq-mgr/: Cargo.toml  README.md  build.rs  cbindgen.toml  moq-mgr.h
moq-mgr-cpp-old/include/moq-mgr/: producer.h
moq-mgr-cpp-old/src/: moq-mgr-consumer-session.cc  moq-mgr-producer-session.cc  moq-mgr-session.cc
moq-mgr-cpp/include/moq-mgr/: consumer.h  session.h
moq-mgr-cpp/src/: moq-mgr-consumer.cc  moq-mgr-producer.cc
moq-mgr/include/moq-mgr/: consumer.h  session.h
moq-mgr/src/: catalog.rs  consumer.rs  ffi.rs  lib.rs  moq-mgr-consumer-session.cc  moq-mgr-consumer.cc  moq-mgr-producer.cc  moq-mgr-session.cc  producer.rs  session.rs
scripts/: build.sh
src/: catalog.rs  config.rs  ffi.rs  lib.rs  session.rs  subscription.rs  subscription_manager.rs  track.rs
test/: basic_test.cpp
tests/: integration_tests.rs
