[package]
name = "moq-wrapper"
version = "0.1.0"
edition = "2021"
description = "A wrapper library for moq-native with session management and reconnection"
license = "MIT OR Apache-2.0"

[lib]
name = "moq_wrapper"
crate-type = ["cdylib", "rlib"]

[dependencies]
moq-lite = { git = "https://github.com/kixelated/moq", tag = "moq-lite-v0.9.6" }
moq-native = { git = "https://github.com/kixelated/moq", tag = "moq-native-v0.9.6" }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
url = "2.0"
bytes = "1.0"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-async = { version = "0.1.1", features = ["tracing"] }
web-transport-trait = { version = "0.2" }
web-transport-quinn = { version = "0.9" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "clock_example"
path = "examples/clock_example.rs"