[package]
name = "moq-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true

# Add moq-native as a git dependency
moq-native = { git = "https://github.com/kixelated/moq-rs", branch = "main", package = "moq-native" }

# FFI dependencies
libc = "0.2"
once_cell = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

[build-dependencies]
cbindgen = "0.24"
