[package]
name = "moq-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Basic dependencies
libc = "0.2"
# Async runtime for real connections
tokio = { version = "1.0", features = ["full"] }
# URL parsing
url = "2.0"
# Error handling
anyhow = "1.0"
# MOQ implementation - actual moq-native crate
moq-native = { git = "https://github.com/kixelated/moq", tag = "moq-native-v0.7.1" }

[build-dependencies]
cbindgen = "0.24"
