[package]
name = "moq-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Basic dependencies
libc = "0.2"
# Async runtime for real connections
tokio = { version = "1.0", features = ["full"] }
# Futures utilities
futures = "0.3"
# URL parsing
url = "2.0"
# Error handling
anyhow = "1.0"
moq-lite = { workspace = true }
moq-native = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cbindgen = "0.24"
