[package]
name = "catalog-test"
version = "0.1.0"
edition = "2021"

[dependencies]
moq-lite = { workspace = true }
moq-native = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
url = "2.0"
