[package]
name = "relay-test"
description = "Relay test application using MOQ native Rust API"
authors = ["MOQ C++ Team"]
repository = "https://github.com/stinkydev/moq-cpp"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
moq-lite = { workspace = true }
moq-native = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
crossterm = "0.27"